tests/lean/typeOf.lean.expected.out
typeOf.lean:11:21-11:24: error: failed to synthesize instance
  HAdd Nat Nat Bool
typeOf.lean:12:0-12:5: error: failed to synthesize instance
  HAdd Bool Nat Nat
typeOf.lean:10:4-10:6: error: (kernel) declaration has metavariables 'f2'
typeOf.lean:20:54-20:60: error: invalid reassignment, term has type
  Bool
but is expected to have type
  Nat
typeOf.lean:29:53-29:57: error: natural number expected, value has type
  Bool
but is expected to have type
  Nat
